src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/NonExistentRoutingResource1/InvalidNonExistentRoutingResource1.php
<?php

namespace Invalid\NonExistentRoutingResource1;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class InvalidNonExistentRoutingResource1 extends ClarolinePlugin
{
    public function getRoutingResourcesPaths()
    {
        return 'wrong/path/file.yml';
    }
}